--- a/BoxOfCourses/BoxOfCourses/BoxOfCourses.csproj
+++ b/BoxOfCourses/BoxOfCourses/BoxOfCourses.csproj
@@ -188,6 +188,10 @@
     <Compile Include="Migrations\202108281127190_review.Designer.cs">
       <DependentUpon>202108281127190_review.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202109151032300_datetimeadded.cs" />
+    <Compile Include="Migrations\202109151032300_datetimeadded.Designer.cs">
+      <DependentUpon>202109151032300_datetimeadded.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Course.cs" />
@@ -569,6 +573,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202108281127190_review.resx">
       <DependentUpon>202108281127190_review.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202109151032300_datetimeadded.resx">
+      <DependentUpon>202109151032300_datetimeadded.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
