Validation on create added, videos to list in progress

--- a/BoxOfCourses/BoxOfCourses/BoxOfCourses.csproj
+++ b/BoxOfCourses/BoxOfCourses/BoxOfCourses.csproj
@@ -375,6 +375,8 @@
     <Content Include="Content\DataTables\images\sort_desc_disabled.png" />
     <Content Include="Content\DataTables\swf\flashExport.swf" />
     <Content Include="Content\photos\3WyW.gif" />
+    <Content Include="Content\photos\bottom-course-wallpaper-1.png" />
+    <Content Include="Content\photos\bottom-course-wallpaper.png" />
     <Content Include="Content\photos\code-coding.gif" />
     <Content Include="Content\photos\code-it.gif" />
     <Content Include="Content\photos\coding.gif" />
